horizontal scrollbar fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,6 +16,10 @@
   --font-rubik-mono: "Rubik Mono One", monospace;
 }
 
+body {
+  width: 100%;
+}
+
 /* Embla */
 
 .embla {
